--- a/client/src/Components/Games.css
+++ b/client/src/Components/Games.css
@@ -7,7 +7,8 @@
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
-    margin-top: 5%;
+    margin: 5% auto;
+    width: 90%;
 }
 .totalGamesCardsTitleBox {
     display: flex;
