--- a/client/src/Components/GiftCardDetail.css
+++ b/client/src/Components/GiftCardDetail.css
@@ -2,14 +2,14 @@
     background-image: url(../images/BannerBG.jpg);
     background-repeat: no-repeat;
     background-size: contain;
-    height: 100vh;
+
     display: flex;
     justify-content: center;
     align-items: center;
+    min-height: 100vh;
 }
 .gcProduct {
     display: flex;
-    margin-top: 10%;
     width: 80%;
     justify-content: space-between;
 }
@@ -88,19 +88,28 @@
     color: #f34f4d;
 }
 @media (max-width: 768px) {
+    .gcDetails {
+        background-size: 100rem;
+        background-position: top;
+    }
     .gcProduct {
         flex-direction: column;
         width: 100%;
         align-items: center;
+        margin-bottom: 25%;
     }
     .productDetailImgDescription {
         flex-direction: column;
-        margin-top: 40%;
+        margin-top: 30vh;
         width: 100%;
     }
+    .productDetailsDescriptionName {
+        margin-top: 2%;
+    }
     .productDetailsImg {
-        height: 50vh;
-        width: 40vw;
+        height: auto;
+        width: 70vw;
+
         display: block;
         text-align: center;
         margin: auto;
