--- a/client/src/Components/Banner.css
+++ b/client/src/Components/Banner.css
@@ -25,3 +25,9 @@
     font-size: 1.3em;
     text-transform: uppercase;
 }
+@media (max-width: 768px) {
+    .BannerTitle {
+        text-align: center;
+        font-size: 2.5em;
+    }
+}
